fix: overflow layout

--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -16,6 +16,11 @@ a
   color: inherit
   text-decoration: none
 
+.wrapper
+  width: 100%
+  min-height: 100vh
+  overflow: hidden
+
 .container
   margin: 0 auto
   width: calc(100% - 128px)
